[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"                                          # They used older stable version
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "1.18"                                # Older stable version
solana-sdk = "1.18"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
