[package]
name = "hello"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "1.18"
solana-sdk = "1.18"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
bs58 = "0.5"
spl-token = "4.0"
base64 = "0.21"
